--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
   "require": {
-    "php": ">=5.6",
+    "php": ">=8.1",
     "illuminate/contracts": ">=5.1.0",
     "illuminate/support": ">=5.1.0",
-    "nesbot/carbon": "^2.22",
-    "pusher/pusher-php-server": "^5.0",
-    "predis/predis": "~1.1.1",
-    "mpratt/embera": "^1.9"
+    "nesbot/carbon": "^2.70",
+    "pusher/pusher-php-server": "*",
+    "predis/predis": "^2.2",
+    "mpratt/embera": "^2.0"
   },
   "require-dev": {
     "ext-json": "*",
