--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "nahid/talk",
+    "name": "alexkag/talk",
     "description": "Talk is a Laravel based realtime messaging, chatting and conversation system. It helps to develop users messaging, chatting and conversations in easy way.",
     "keywords": ["message", "inbox", "conversations", "chat", "php", "laravel", "realtime", "real-time"],
-    "homepage": "https://github.com/nahid/talk",
+    "homepage": "https://github.com/alexkag/nahid-talk",
     "license": "MIT",
     "authors": [
         {
@@ -26,7 +26,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Nahid\\Talk\\": "src"
+      "Alexkag\\Talk\\": "src"
     },
     "files": [
       "src/helpers/talk.php"
