--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "phpunit/phpunit": "^4.8 || ^5.0 || ^7.0 || ^8.0"
   },
   "autoload": {
-    "psr-4": {
-      "Nahid\\Talk\\": "src"
-    },
+    "classmap": [
+      "src"
+    ],
     "files": [
       "src/helpers/talk.php"
     ]
