--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "alexkag/nahid-talk",
+    "name": "alexkag/nahidtalk",
     "description": "Talk is a Laravel based realtime messaging, chatting and conversation system. It helps to develop users messaging, chatting and conversations in easy way.",
     "keywords": ["message", "inbox", "conversations", "chat", "php", "laravel", "realtime", "real-time"],
-    "homepage": "https://github.com/alexkag/nahid-talk",
+    "homepage": "https://github.com/alexkag/nahidtalk",
     "license": "MIT",
     "authors": [
         {
